[gd_scene load_steps=4 format=3 uid="uid://31822ylgulqm"]

[ext_resource type="Script" path="res://scripts/UI.gd" id="1_i5qs8"]
[ext_resource type="Texture2D" uid="uid://7vgocvqi85y0" path="res://art/game start button.png" id="2_wjun1"]
[ext_resource type="FontFile" uid="uid://0am7dtrhyvmx" path="res://brackeys_platformer_assets/fonts/PixelOperator8-Bold.ttf" id="3_f5ssk"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_i5qs8")

[node name="end_game_screen" type="Node2D" parent="."]

[node name="restart_button" type="Button" parent="end_game_screen"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 13.0
offset_top = 113.0
offset_right = 111.0
offset_bottom = 148.0

[node name="Sprite2D" type="Sprite2D" parent="end_game_screen/restart_button"]
position = Vector2(564, 260)
scale = Vector2(14.7969, 7.13281)
texture = ExtResource("2_wjun1")

[node name="end_game_score_display" type="Node2D" parent="end_game_screen"]

[node name="end_score" type="Label" parent="end_game_screen/end_game_score_display"]
offset_left = 333.0
offset_top = 98.0
offset_right = 826.0
offset_bottom = 363.0
theme_override_fonts/font = ExtResource("3_f5ssk")
theme_override_font_sizes/font_size = 64
text = "your score was x"
horizontal_alignment = 1
autowrap_mode = 2

[node name="quit_button" type="Button" parent="end_game_screen"]
self_modulate = Color(1, 1, 0.482353, 1)
offset_left = 367.0
offset_top = 434.0
offset_right = 787.0
offset_bottom = 564.0

[node name="Label" type="Label" parent="end_game_screen/quit_button"]
layout_mode = 1
anchors_preset = -1
anchor_right = 2.5
anchor_bottom = 1.437
offset_left = 12.0
offset_top = 17.0
offset_right = -641.0
offset_bottom = -67.81
theme_override_fonts/font = ExtResource("3_f5ssk")
theme_override_font_sizes/font_size = 32
text = "quit like a little baby man"
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="end_game_screen/restart_button" to="." method="_on_restart_button_pressed"]
